# OpenViking

./: .gitignore  eval_results.json  pyproject.toml
.github/workflows/: codeql.yml  lint.yml  pr.yml  publish.yml  test.yml
bot/: README.md  pyproject.toml
bot/deploy/: Dockerfile
bot/deploy/local/: Dockerfile
bot/deploy/vke/: vke_deploy.example.yaml  vke_deploy.py
bot/deploy/vke/k8s/: deployment.yaml
bot/scripts/: start_vikingbot.sh
bot/specs/: 11-sandbox-integration.md  14-multi-pod-coordination.md  15-opensandbox-integration.md
bot/tests/sandbox/: test_config.py  test_manager.py  test_sandbox_tools.py
bot/vikingbot/: __main__.py
bot/vikingbot/agent/: context.py  loop.py
bot/vikingbot/agent/tools/: filesystem.py  image.py  shell.py
bot/vikingbot/channels/: base.py  discord.py  feishu.py  manager.py  telegram.py
bot/vikingbot/cli/: commands.py
bot/vikingbot/config/: schema.py
bot/vikingbot/console/api/: partials.py
bot/vikingbot/sandbox/: manager.py
bot/vikingbot/session/: manager.py
bot/vikingbot/tui/: app.py
bot/vikingbot/utils/: helpers.py
docs/en/api/: 01-overview.md
docs/zh/api/: 01-overview.md
examples/eval/: .gitignore  README.md  ov.conf.example  pyproject.toml  questions.jsonl.example  rag_eval.py
openviking/eval/: README.md  __init__.py  base.py  generator.py  pipeline.py  rag_eval.py  ragas.py  types.py
openviking/retrieve/: hierarchical_retriever.py
openviking/service/: core.py
openviking/storage/: viking_fs.py  viking_vector_index_backend.py
tests/eval/: test_eval_basic.py  test_validation.py
(+4 files in other folders)
